--- a/archives/toutiao-search/2024-04-04.md
+++ b/archives/toutiao-search/2024-04-04.md
@@ -1,59 +1,72 @@
 # 2024-04-04
 
-共 268 条
+共 278 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Apr 04 2024 18:00:36 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Apr 04 2024 19:00:34 GMT+0800 (China Standard Time) -->
 1. [今年清明为何是4月4日](https://so.toutiao.com/search?keyword=今年清明为何是4月4日)
 1. [碾压2名小孩的奔驰司机已投案](https://so.toutiao.com/search?keyword=碾压2名小孩的奔驰司机已投案)
 1. [英雄从未远去](https://so.toutiao.com/search?keyword=英雄从未远去)
-1. [马英九祭拜黄帝后哽咽发声](https://so.toutiao.com/search?keyword=马英九祭拜黄帝后哽咽发声)
+1. [床太大影响开关 姑娘想要退租](https://so.toutiao.com/search?keyword=床太大影响开关+姑娘想要退租)
 1. [公园现“爬行锻炼大军”](https://so.toutiao.com/search?keyword=公园现“爬行锻炼大军”)
-1. [交警称奔驰2次碾压小孩非主观故意](https://so.toutiao.com/search?keyword=交警称奔驰2次碾压小孩非主观故意)
-1. [高三女生每天自己开车上学](https://so.toutiao.com/search?keyword=高三女生每天自己开车上学)
-1. [俄罗斯就法国对乌派兵可能性发警告](https://so.toutiao.com/search?keyword=俄罗斯就法国对乌派兵可能性发警告)
 1. [哈尔滨22岁男子被多名未成年人围殴](https://so.toutiao.com/search?keyword=哈尔滨22岁男子被多名未成年人围殴)
-1. [学校回应有学生抗议清明节不放假](https://so.toutiao.com/search?keyword=学校回应有学生抗议清明节不放假)
-1. [媒体：别在孩子身上乱玩辛者库的梗](https://so.toutiao.com/search?keyword=媒体：别在孩子身上乱玩辛者库的梗)
-1. [广西人祭祖开始走水路了](https://so.toutiao.com/search?keyword=广西人祭祖开始走水路了)
-1. [地震损失6000万美元？台积电辟谣](https://so.toutiao.com/search?keyword=地震损失6000万美元？台积电辟谣)
-1. [日本福岛县近海发生6.0级地震](https://so.toutiao.com/search?keyword=日本福岛县近海发生6.0级地震)
-1. [地震时男孩一把抱起同桌往外冲](https://so.toutiao.com/search?keyword=地震时男孩一把抱起同桌往外冲)
+1. [“消费降级”的香港人正挤爆深圳](https://so.toutiao.com/search?keyword=“消费降级”的香港人正挤爆深圳)
+1. [美财长耶伦抵达广州](https://so.toutiao.com/search?keyword=美财长耶伦抵达广州)
 1. [救人副镇长失联17小时后遗体被找到](https://so.toutiao.com/search?keyword=救人副镇长失联17小时后遗体被找到)
-1. [沙利文骨折与俄空袭乌有关吗](https://so.toutiao.com/search?keyword=沙利文骨折与俄空袭乌有关吗)
-1. [福宝在四川的家里嘎嘎炫饭](https://so.toutiao.com/search?keyword=福宝在四川的家里嘎嘎炫饭)
-1. [90后用87个账户操纵股价获利9000万](https://so.toutiao.com/search?keyword=90后用87个账户操纵股价获利9000万)
+1. [伊朗以色列可能爆发直接冲突吗](https://so.toutiao.com/search?keyword=伊朗以色列可能爆发直接冲突吗)
+1. [马英九祭拜黄帝后哽咽发声](https://so.toutiao.com/search?keyword=马英九祭拜黄帝后哽咽发声)
+1. [地震时男孩一把抱起同桌往外冲](https://so.toutiao.com/search?keyword=地震时男孩一把抱起同桌往外冲)
+1. [地震损失6000万美元？台积电辟谣](https://so.toutiao.com/search?keyword=地震损失6000万美元？台积电辟谣)
 1. [在执法车上呕吐后死亡男子家属发声](https://so.toutiao.com/search?keyword=在执法车上呕吐后死亡男子家属发声)
+1. [90后用87个账户操纵股价获利9000万](https://so.toutiao.com/search?keyword=90后用87个账户操纵股价获利9000万)
+1. [学校回应有学生抗议清明节不放假](https://so.toutiao.com/search?keyword=学校回应有学生抗议清明节不放假)
+1. [沙利文骨折与俄空袭乌有关吗](https://so.toutiao.com/search?keyword=沙利文骨折与俄空袭乌有关吗)
+1. [黄智贤：必须要把台湾带回家](https://so.toutiao.com/search?keyword=黄智贤：必须要把台湾带回家)
+1. [媒体：别在孩子身上乱玩辛者库的梗](https://so.toutiao.com/search?keyword=媒体：别在孩子身上乱玩辛者库的梗)
+1. [男子举报缺斤少两遭商家掐脖殴打](https://so.toutiao.com/search?keyword=男子举报缺斤少两遭商家掐脖殴打)
 1. [博主：“骨灰房”扎堆是因墓地太贵](https://so.toutiao.com/search?keyword=博主：“骨灰房”扎堆是因墓地太贵)
 1. [六大行存款一年多了14万亿](https://so.toutiao.com/search?keyword=六大行存款一年多了14万亿)
-1. [为何两岸同胞要祭拜轩辕黄帝](https://so.toutiao.com/search?keyword=为何两岸同胞要祭拜轩辕黄帝)
-1. [央媒：让娃做饭幼儿园值得全国推广](https://so.toutiao.com/search?keyword=央媒：让娃做饭幼儿园值得全国推广)
+1. [高三女生每天自己开车上学](https://so.toutiao.com/search?keyword=高三女生每天自己开车上学)
+1. [30年殡葬从业者：尽情活着就好](https://so.toutiao.com/search?keyword=30年殡葬从业者：尽情活着就好)
 1. [姜爷爷希望福宝回中国不要改名字](https://so.toutiao.com/search?keyword=姜爷爷希望福宝回中国不要改名字)
-1. [男子举报缺斤少两遭商家掐脖殴打](https://so.toutiao.com/search?keyword=男子举报缺斤少两遭商家掐脖殴打)
+1. [央媒：让娃做饭幼儿园值得全国推广](https://so.toutiao.com/search?keyword=央媒：让娃做饭幼儿园值得全国推广)
+1. [为了卖掉房子 她做了半年中介](https://so.toutiao.com/search?keyword=为了卖掉房子+她做了半年中介)
+1. [福宝在四川的家里嘎嘎炫饭](https://so.toutiao.com/search?keyword=福宝在四川的家里嘎嘎炫饭)
+1. [伊朗最高领袖：以色列将被扇耳光](https://so.toutiao.com/search?keyword=伊朗最高领袖：以色列将被扇耳光)
+1. [日本福岛县近海发生6.0级地震](https://so.toutiao.com/search?keyword=日本福岛县近海发生6.0级地震)
 1. [77岁美财长耶伦时隔9月再访华](https://so.toutiao.com/search?keyword=77岁美财长耶伦时隔9月再访华)
+1. [媒体：小米汽车日产能不足300辆](https://so.toutiao.com/search?keyword=媒体：小米汽车日产能不足300辆)
+1. [广西人祭祖开始走水路了](https://so.toutiao.com/search?keyword=广西人祭祖开始走水路了)
+1. [开封王婆说自己是家里的润滑剂](https://so.toutiao.com/search?keyword=开封王婆说自己是家里的润滑剂)
 1. [杭州00后车主提前数小时到店提SU7](https://so.toutiao.com/search?keyword=杭州00后车主提前数小时到店提SU7)
-1. [伊朗以色列可能爆发直接冲突吗](https://so.toutiao.com/search?keyword=伊朗以色列可能爆发直接冲突吗)
+1. [野猪进村攻击老人 村民持棍棒驱赶](https://so.toutiao.com/search?keyword=野猪进村攻击老人+村民持棍棒驱赶)
+1. [“我在殡仪馆当遗体接抬工”](https://so.toutiao.com/search?keyword=“我在殡仪馆当遗体接抬工”)
+1. [失火致3死养老院：不存在20平米住13人](https://so.toutiao.com/search?keyword=失火致3死养老院：不存在20平米住13人)
+1. [“辛者库”幼儿园报名已排到后年](https://so.toutiao.com/search?keyword=“辛者库”幼儿园报名已排到后年)
+1. [俄官员：将对北约任何威胁做出回应](https://so.toutiao.com/search?keyword=俄官员：将对北约任何威胁做出回应)
+1. [俄罗斯就法国对乌派兵可能性发警告](https://so.toutiao.com/search?keyword=俄罗斯就法国对乌派兵可能性发警告)
+1. [花莲县长救灾身穿马甲标注姓名职务](https://so.toutiao.com/search?keyword=花莲县长救灾身穿马甲标注姓名职务)
+1. [小米汽车要求供应商月产1万辆](https://so.toutiao.com/search?keyword=小米汽车要求供应商月产1万辆)
+1. [雷军 整顿各行各业的神](https://so.toutiao.com/search?keyword=雷军+整顿各行各业的神)
+1. [浙江高中生徒步25公里向烈士墓敬礼](https://so.toutiao.com/search?keyword=浙江高中生徒步25公里向烈士墓敬礼)
+1. [论先进生产工具在祭祖中产生的作用](https://so.toutiao.com/search?keyword=论先进生产工具在祭祖中产生的作用)
+1. [专家：万达获投资拆掉地产业一暗雷](https://so.toutiao.com/search?keyword=专家：万达获投资拆掉地产业一暗雷)
+1. [俄方：将回应韩国“不友好”之举](https://so.toutiao.com/search?keyword=俄方：将回应韩国“不友好”之举)
 1. [31万买新车不到一个月就短路又漏油](https://so.toutiao.com/search?keyword=31万买新车不到一个月就短路又漏油)
+1. [6句绝美清明诗词](https://so.toutiao.com/search?keyword=6句绝美清明诗词)
+1. [交警称奔驰2次碾压小孩非主观故意](https://so.toutiao.com/search?keyword=交警称奔驰2次碾压小孩非主观故意)
+1. [为何两岸同胞要祭拜轩辕黄帝](https://so.toutiao.com/search?keyword=为何两岸同胞要祭拜轩辕黄帝)
 1. [湖北失联30天的18岁男生遗体已找到](https://so.toutiao.com/search?keyword=湖北失联30天的18岁男生遗体已找到)
 1. [《惜花芷》开局就抄家](https://so.toutiao.com/search?keyword=《惜花芷》开局就抄家)
-1. [“消费降级”的香港人正挤爆深圳](https://so.toutiao.com/search?keyword=“消费降级”的香港人正挤爆深圳)
-1. [黄智贤：必须要把台湾带回家](https://so.toutiao.com/search?keyword=黄智贤：必须要把台湾带回家)
 1. [众人吟唱《黄帝颂》缅怀轩辕黄帝](https://so.toutiao.com/search?keyword=众人吟唱《黄帝颂》缅怀轩辕黄帝)
-1. [媒体：小米汽车日产能不足300辆](https://so.toutiao.com/search?keyword=媒体：小米汽车日产能不足300辆)
 1. [吉林有学校组织学生到烈士陵园扫墓](https://so.toutiao.com/search?keyword=吉林有学校组织学生到烈士陵园扫墓)
-1. [“辛者库”幼儿园报名已排到后年](https://so.toutiao.com/search?keyword=“辛者库”幼儿园报名已排到后年)
 1. [男子火锅店打架用锅底泼人 警方通报](https://so.toutiao.com/search?keyword=男子火锅店打架用锅底泼人+警方通报)
 1. [乌外长：西方供乌武器根本不够](https://so.toutiao.com/search?keyword=乌外长：西方供乌武器根本不够)
-1. [为了卖掉房子 她做了半年中介](https://so.toutiao.com/search?keyword=为了卖掉房子+她做了半年中介)
 1. [男子扫墓遭红火蚁咬伤休克被送医](https://so.toutiao.com/search?keyword=男子扫墓遭红火蚁咬伤休克被送医)
 1. [传华为P70全系均为三角形后摄Deco](https://so.toutiao.com/search?keyword=传华为P70全系均为三角形后摄Deco)
-1. [俄方：将回应韩国“不友好”之举](https://so.toutiao.com/search?keyword=俄方：将回应韩国“不友好”之举)
-1. [30年殡葬从业者：尽情活着就好](https://so.toutiao.com/search?keyword=30年殡葬从业者：尽情活着就好)
-1. [“我在殡仪馆当遗体接抬工”](https://so.toutiao.com/search?keyword=“我在殡仪馆当遗体接抬工”)
 1. [媒体：耶伦来谈 美要想清几个问题](https://so.toutiao.com/search?keyword=媒体：耶伦来谈+美要想清几个问题)
 1. [吉林大广高速14车连撞 有人员受伤](https://so.toutiao.com/search?keyword=吉林大广高速14车连撞+有人员受伤)
 1. [盐湖股份称未受青海地震影响](https://so.toutiao.com/search?keyword=盐湖股份称未受青海地震影响)
-1. [论先进生产工具在祭祖中产生的作用](https://so.toutiao.com/search?keyword=论先进生产工具在祭祖中产生的作用)
 1. [地震大楼倒塌瞬间女子拔腿就跑](https://so.toutiao.com/search?keyword=地震大楼倒塌瞬间女子拔腿就跑)
 1. [福宝在成都的家里嘎嘎炫饭](https://so.toutiao.com/search?keyword=福宝在成都的家里嘎嘎炫饭)
 1. [知名外企要彻底撤离中国？假的](https://so.toutiao.com/search?keyword=知名外企要彻底撤离中国？假的)
@@ -71,7 +84,6 @@
 1. [官方回应福宝被人不戴手套戳头](https://so.toutiao.com/search?keyword=官方回应福宝被人不戴手套戳头)
 1. [男子称吃完饭遭临时加价还被嘲讽](https://so.toutiao.com/search?keyword=男子称吃完饭遭临时加价还被嘲讽)
 1. [詹姆斯被判一级恶意犯规](https://so.toutiao.com/search?keyword=詹姆斯被判一级恶意犯规)
-1. [雷军 整顿各行各业的神](https://so.toutiao.com/search?keyword=雷军+整顿各行各业的神)
 1. [家国永念](https://so.toutiao.com/search?keyword=家国永念)
 1. [男子在地铁站偷拍女生还指责其穿着](https://so.toutiao.com/search?keyword=男子在地铁站偷拍女生还指责其穿着)
 1. [贵州毕节：万紫千红总是春](https://so.toutiao.com/search?keyword=贵州毕节：万紫千红总是春)
@@ -85,7 +97,6 @@
 1. [军嫂带龙凤胎到部队探亲](https://so.toutiao.com/search?keyword=军嫂带龙凤胎到部队探亲)
 1. [巴基斯坦老人守中国烈士陵园40余载](https://so.toutiao.com/search?keyword=巴基斯坦老人守中国烈士陵园40余载)
 1. [英国游客大赞杭州是旅游胜地](https://so.toutiao.com/search?keyword=英国游客大赞杭州是旅游胜地)
-1. [6句绝美清明诗词](https://so.toutiao.com/search?keyword=6句绝美清明诗词)
 1. [奔驰碾压孩子后驶离 女司机已找到](https://so.toutiao.com/search?keyword=奔驰碾压孩子后驶离+女司机已找到)
 1. [军媒就解放军中缅边境演习发声](https://so.toutiao.com/search?keyword=军媒就解放军中缅边境演习发声)
 1. [真的有地震前兆吗](https://so.toutiao.com/search?keyword=真的有地震前兆吗)
@@ -145,7 +156,6 @@
 1. [来看各地清明文化习俗](https://so.toutiao.com/search?keyword=来看各地清明文化习俗)
 1. [冥币店仓库起火 店主：损失好几万](https://so.toutiao.com/search?keyword=冥币店仓库起火+店主：损失好几万)
 1. [济南小学生向烈士献花鞠躬](https://so.toutiao.com/search?keyword=济南小学生向烈士献花鞠躬)
-1. [花莲县长救灾身穿马甲标注姓名职务](https://so.toutiao.com/search?keyword=花莲县长救灾身穿马甲标注姓名职务)
 1. [蒋勤勤回应陈建斌吓出表情包](https://so.toutiao.com/search?keyword=蒋勤勤回应陈建斌吓出表情包)
 1. [伊朗东南部两地军事总部遭恐袭](https://so.toutiao.com/search?keyword=伊朗东南部两地军事总部遭恐袭)
 1. [伊朗一警察局遭袭 3名安全人员身亡](https://so.toutiao.com/search?keyword=伊朗一警察局遭袭+3名安全人员身亡)
